# th-deploy-obsidian

./: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml  run-all-checks.sh  setup.cfg
.github/: dependabot.yml
.github/workflows/: linters.yml
assets/couchdb/: docker.ini
assets/docker/cloudflared/: Dockerfile
obsidian/: cloudflare.py  couchdb.py  utils.py
