[tool.poetry]
name = "obsidian"
version = "0.1.0"
description = ""
authors = ["Tobias Henkel <tobias.henkel@bmw.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pulumi = "3.144.1"
pulumi-docker = "4.5.8"
pulumi-command = "1.0.1"
pulumi-random = "4.16.8"
pyyaml = "^6.0.1"
pulumi-cloudflare = "5.45.0"
ruff = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.0.3"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
